Give a second pass to Polish world news

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -385,32 +385,37 @@ worldnews.50.f:0 "We will outlast them all. The Ottoman Empire will win. Praise 
 worldnews.50.g:0 "Our old Turkish ally stands on the brink of destruction. Concerning."
 
 worldnews.51.t:0 "Poland Elects a New King"
-worldnews.51.d:0 "For almost two decades the Polish throne has remained empty. After the end of the Weltkrieg, a Regency Council was convened to elect the new Polish King. However, constant interference and ineptitude has prevented the Council from selecting a king for all these years. But now, after many weeks of intense debate inside the chambers of the Polish Regency Council, the decision was finally made to elect a new monarch to the long-vacant Polish throne. The coronation of [POL.GetLeader] was held in the palace at Warsaw early in the morning, and has been followed by parades and celebration throughout the nation. It remains to be seen whether the new King can navigate the small Polish nation through the coming storms."
-worldnews.51.a:0 "They made a wise decision."
-worldnews.51.b:0 "They chose the wrong king!"
-worldnews.51.c:0 "Now they can move on."
-worldnews.51.e:0 "To our glorious future!"
+worldnews.51.d:0 "For almost two decades the Polish throne has remained empty. After the end of the Weltkrieg, a Regency Council was convened to elect the new Polish King. However, constant interference and ineptitude has prevented the Council from selecting a king for all these years. But now, after many weeks of intense debate inside the chambers of the Polish Regency Council, the decision was finally made to elect a new monarch to the long-vacant Polish throne.\n\nThe coronation of [POL.GetLeader] was held in the palace at Warsaw early in the morning, and has been followed by parades and celebration throughout the nation. It remains to be seen whether the new King can navigate the small Polish nation through the coming storms."
+worldnews.51.a:0 "By backing our candidate, the Poles make a good decision."
+worldnews.51.b:0 "They turned down our candidate. This is an insult to our country!"
+worldnews.51.c:0 "With a new King, Poland finally moves on from the Eternal Regency."
+worldnews.51.e:0 "The Regency is over, a new and glorious start awaits Poland!"
+worldnews.51.f:0 "The Polish workers should have used the Regency to oust the reactionaries."
 
-worldnews.52.t:0 "Poland Falls to Syndicalists"
-worldnews.52.d:0 "After the complete collapse of the Polish government following the Black Monday disaster, Poland found itself in complete anarchy, with many different political factions vying for power in the vacuum of the old Kingdom. This fighting has come to a close today as Syndicalist forces claim victory, announcing their complete control of the country from the chambers of the defunct Regency Council. The International community has reacted with shock, as the formerly conservative government of the Kingdom has been replaced with a radical Syndicalist government seemingly overnight. Time will tell how this bodes for Europe."
-worldnews.52.a:0 "Welcome our new brothers!"
-worldnews.52.b:0 "Another nation falls to the plague."
-worldnews.52.c:0 "Glory to us!"
+worldnews.52.t:0 "Poland Falls to Syndicalism"
+worldnews.52.d:0 "After the complete collapse of the Polish government following the Black Monday disaster, Poland found itself in complete anarchy, with many different political factions vying for power in the vacuum of the old Kingdom. This fighting has come to a close today as Syndicalist forces claim victory, announcing their complete control of the country from the chambers of the defunct Regency Council.\n\nThe international community has reacted with shock, as the formerly conservative government of the Kingdom has been replaced with a radical Syndicalist government seemingly overnight. Time will tell how this bodes for Europe."
+worldnews.52.a:0 "The Polish workers are welcome, the reactionaries around them will soon give way."
+worldnews.52.b:0 "Mitteleuropa fails to prevent a Syndicalist uprising. A poor show for Germany."
+worldnews.52.c:0 "The Polish workers are free! Now, we must prepare for the reactionaries to respond."
+worldnews.52.e:0 "This will not stand. Perhaps Poland should not have been liberated, afterall."
 
-worldnews.53.t:0 "Poland Falls to Nationalists"
-worldnews.53.d:0 "After the complete collapse of the Polish government following the Black Monday disaster, Poland found itself in complete anarchy, with many different political factions vying for power in the vacuum of the old Kingdom. This fighting has come to a close today as Polish Nationalist forces claim victory, formally announcing the creation of the new regime from the abandoned steps of the palace at Warsaw. The new nationalist government has rattled their neighbours with immediate proclamations of a 'Greater Polish State' and intentions to unify all Polish people under one flag. Whether or not the new government can make good on their promises remains to be seen."
-worldnews.53.a:0 "A worrisome development."
-worldnews.53.b:0 "To our new future!"
+worldnews.53.t:0 "Poland Falls to Nationalism"
+worldnews.53.d:0 "After the complete collapse of the Polish government following the Black Monday disaster, Poland found itself in complete anarchy, with many different political factions vying for power in the vacuum of the old Kingdom. This fighting has come to a close today as Polish Nationalist forces claim victory, formally announcing the creation of the new regime from the abandoned steps of the palace at Warsaw.\n\nThe new nationalist government has rattled their neighbours with immediate proclamations of a 'Greater Polish State' and intentions to unify all Polish people under one flag. Whether or not the new government can make good on their promises remains to be seen."
+worldnews.53.a:0 "Another Greater Poland Uprising in the making? Will Poland ever suceed?"
+worldnews.53.b:0 "Greater Poland is a fact. Posen, Western Pomenaria and Silesia are ours by right!"
+worldnews.53.c:0 "Poland would be wise to not upset the region's stability with such claims."
 
 worldnews.54.t:0 "Poland Declares the Republic"
-worldnews.54.d:0 "After several high-profile terror attacks in Poland and the new-total collapse of their economy, a large group of high-ranking Polish officials have released a statement declaring the creation of a new 'Polish Republic'. The declaration was met with immediate declarations of support from many government branches, and it appears that the Republic has taken control of most of the country with almost no bloodshed. The Regency Council, the former ruling authority in Poland, has been dissolved, and the question of the next Polish King left forever unanswered. The people have rallied around the new Republic, and the country's new future appears bright."
-worldnews.54.a:0 "Interesting."
-worldnews.54.b:0 "Long live the Republic!"
+worldnews.54.d:0 "After several high-profile terror attacks in Poland and the near-total collapse of their economy, a large group of high-ranking Polish officials have released a statement declaring the creation of a new 'Polish Republic'. The declaration was met with immediate declarations of support from many government branches, and it appears that the Republic has taken control of most of the country with almost no bloodshed.\n\nThe Regency Council, the former ruling authority in Poland, has been dissolved, and the question of the next Polish King left forever unanswered. The people have rallied around the new Republic, and the country's new future appears bright."
+worldnews.54.a:0 "At least the reactionary Regency has been cast out. Hopefully the workers will suceed."
+worldnews.54.b:0 "A new liberal Republic rises in Mitteleuropa. The Old Order can't yet fade, can it?"
+worldnews.54.c:0 "We welcome the rise of a new, healthy democracy in Poland! Good luck to the Sejm."
+worldnews.54.e:0 "Enough with foreign Kings! Today, Polish citizens will vote for their new leader."
 
 worldnews.55.t:0 "The Polish Military Seizes Control"
-worldnews.55.d:0 "In order to prevent a total collapse of the government in Poland, yesterday the Sejm passed an emergency measure to invite the Polish Military to create a new government until the economic and political situations stabilise. The Polish military moved swiftly under the guidance of [POL.GetLeader], who has declared national curfews in the wake of this sudden military takeover. Polish military units now patrol the streets of Warsaw, and many wonder if even after the situation stabilises, the military intends to stay."
-worldnews.55.a:0 "Interesting."
-worldnews.55.b:0 "It is for the best."
+worldnews.55.d:0 "In order to prevent a total collapse of the government in Poland, yesterday the Sejm passed an emergency measure to invite the Polish Military to create a new government until the economic and political situations stabilises. The Polish military moved swiftly under the guidance of [POL.GetLeader], who has declared national curfews in the wake of this sudden military takeover.\n\nPolish military units now patrol the streets of Warsaw, and many wonder if even after the situation stabilises, the military intends to stay and create yet another military dictatorship in Eastern Europe."
+worldnews.55.a:0 "Poland could not choose for itself, it appears. The military chose for her."
+worldnews.55.b:0 "With unrest and violence rising, the military guarantees our stability!"
 
 ### City Fall Events ###
 
