--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -397,11 +397,11 @@ worldnews.52.d:0 "After the complete collapse of the Polish government following
 worldnews.52.a:0 "The Polish workers are welcome, the reactionaries around them will soon give way."
 worldnews.52.b:0 "Mitteleuropa fails to prevent a Syndicalist uprising. A poor show for Germany."
 worldnews.52.c:0 "The Polish workers are free! Now, we must prepare for the reactionaries to respond."
-worldnews.52.e:0 "This will not stand. Perhaps Poland should not have been liberated, afterall."
+worldnews.52.e:0 "This will not stand. Perhaps Poland should not have been liberated, after all."
 
 worldnews.53.t:0 "Poland Falls to Nationalism"
 worldnews.53.d:0 "After the complete collapse of the Polish government following the Black Monday disaster, Poland found itself in complete anarchy, with many different political factions vying for power in the vacuum of the old Kingdom. This fighting has come to a close today as Polish Nationalist forces claim victory, formally announcing the creation of the new regime from the abandoned steps of the palace at Warsaw.\n\nThe new nationalist government has rattled their neighbours with immediate proclamations of a 'Greater Polish State' and intentions to unify all Polish people under one flag. Whether or not the new government can make good on their promises remains to be seen."
-worldnews.53.a:0 "Another Greater Poland Uprising in the making? Will Poland ever suceed?"
+worldnews.53.a:0 "Another Greater Poland Uprising in the making? Will Poland ever succeed?"
 worldnews.53.b:0 "Greater Poland is a fact. Posen, Western Pomenaria and Silesia are ours by right!"
 worldnews.53.c:0 "Poland would be wise to not upset the region's stability with such claims."
 
