Syndicalist Ukraine leaves Mitteleuropa

--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -222,6 +222,24 @@ ukraine.31.b:0 "Too damn expensive!"
 ukraine.32.t:0 "The Industrialisation of Eastern Ukraine is Complete"
 ukraine.32.d:0 "The workers of Eastern Ukraine have got new workplaces. As a result a majority of the population has become loyal to us. We have recovered from Black Monday and defeated all the syndicalist trade unions in the East!"
 ukraine.32.a:0 "Great!"
+ukraine.34.d:0 "The treacherous Ukrainians have deserted our alliance! Many hotheads in the general staff suggest military action to punish the Ukraine, however, doing so would be extremely unwise as Ukraine possesses one of the largest armed forces in Europe. Instead members of the Abwehr suggest that we use our ties with many important members of the Ukrainian armed forces to instigate a coup. How shall we react to this betrayal?"
+ukraine.34.a:0 "There is nothing we can do..."
+ukraine.34.b:0 "Covert operations will be good enough."
+ukraine.35.c:0 "Such betrayal will not be tolerated!"
+ukraine.35.t:0 "German Military Mission Leaves the Ukraine"
+ukraine.35.d:0 "Following our decision to leave the hated Mitteleuropa System, the German military mission present in country since 1918 finally left!"
+ukraine.35.a:0 "Finally they leave!"
+ukraine.39.t:0 "Attempt at a Military Coup"
+ukraine.39.d:0 "German agitators with the help of reactionary officers and a part of the armed forces, have launched a coup against our government and are trying to restore the pro-German regime in Ukraine. The country is in chaos, how will the situation develop?"
+ukraine.39.a:0 "The reactionary putschists secure the capital!"
+ukraine.39.b:0 "Red militias defend the capital!"
+ukraine.40.t:0 "Military Coup in the Ukraine"
+ukraine.40.d:0 "Members of German military mission together with parts of the Ukrainian armed forces have successfully seized control of Kiev, overthrowing the Ukrainian Socialist government and replacing it with one loyal to the German Empire. We have once again secured Ukraine as a member of Mitteleuropa and prevented the expansion of Syndicalist influence!"
+ukraine.40.a:0 "Excellent!"
+ukraine.41.t:0 "Military Coup in the Ukraine Failed"
+ukraine.41.d:0 "Our attempt to replace the government in Ukraine with one loyal to our state has failed miserably. What shall we do now?"
+ukraine.41.a:0 "There is nothing we can do..."
+ukraine.41.b:0 "War will solve this!"
 
 ### Foci ###
 
